@@ -1,8 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.107 2005/04/30 23:35:51 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.108 2005/05/01 06:27:43 agaffney Exp $
 
 *GLI-gtkfe-0.01 (11 Dec 2004)
+
+  1 May 2005; Andrew Gaffney <agaffney@gentoo.org>
+  PartProperties gets cur_size parameter. PartProperties allows sliding bar
+  when a partition is resizeable.
 
   30 Apr 2005; Andrew Gaffney <agaffney@gentoo.org>
   Add 'Format' to PartProperties. Remove craptastic split partitioning screen
